--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,4 +23,6 @@
     <div id="root"></div>
    
   </body>
+  <script type="module" src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
 </html>
